[workspace]
members = [
    # Core library
    "gymnasium",
    # CLI tool
    "gymnasium_cli",
    # Python module
    "gymnasium_py",
]
resolver = "2"

[workspace.package]
authors = ["Andrej Orsula <orsula.andrej@gmail.com>"]
categories = ["api-bindings", "science"]
description = "Gymnasium API for Reinforcement Learning"
edition = "2021"
keywords = ["gym", "ml", "rl"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AndrejOrsula/gymnasium_rs"
rust-version = "1.70"
version = "0.1.0"

[workspace.dependencies]
gymnasium = { path = "gymnasium", version = "0.1.0" }

assert_cmd = { version = "2" }
clap = { version = "4.4", features = ["derive"] }
predicates = { version = "3" }
pyo3 = { version = "0.20", features = ["abi3-py310", "auto-initialize"] }
thiserror = { version = "1.0" }
