[workspace]
members = [
    # Core library
    "gymnasium",
    # CLI tool
    "gymnasium_cli",
    # Python module
    "gymnasium_py",
    # Rust FFI bindings
    "gymnasium_sys",
]
resolver = "2"

[workspace.package]
authors = ["Andrej Orsula <orsula.andrej@gmail.com>"]
categories = ["api-bindings", "science"]
description = "Gymnasium API for Reinforcement Learning"
edition = "2021"
keywords = ["gym", "ml", "rl"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AndrejOrsula/gymnasium_rs"
rust-version = "1.70"
version = "0.0.1"

[workspace.dependencies]
gymnasium = { path = "gymnasium", version = "0.0.1" }
gymnasium_sys = { path = "gymnasium_sys", version = "0.0.1" }

assert_cmd = { version = "2" }
clap = { version = "4.4", features = ["derive"] }
predicates = { version = "3" }
pyo3 = { version = "0.20", features = ["abi3-py310", "auto-initialize"] }
pyo3_bindgen = { version = "0.2" }
thiserror = { version = "1.0" }

itertools = { version = "0.12" }
dfdx = { git = "https://github.com/coreylowman/dfdx.git", rev = "f4f7165" }
ndarray = { version = "0.15" }
num-traits = { version = "0.2" }
numpy = { version = "0.20" }
rand = { version = "0.8", features = ["small_rng"] }

[patch.crates-io]
# pyo3_bindgen = { path = "../pyo3_bindgen/pyo3_bindgen" }
pyo3_bindgen = { git = "https://github.com/AndrejOrsula/pyo3_bindgen.git", branch = "dev" }
