[package]
name = "gymnasium"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
dfdx = { workspace = true }
gymnasium_sys = { workspace = true }
num-traits = { workspace = true }
pyo3 = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
thiserror = { workspace = true }

[lib]
name = "gymnasium"
path = "src/lib.rs"
crate-type = ["rlib"]
