[package]
name = "gymnasium"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
dfdx = { workspace = true, optional = true }
gymnasium_sys = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
dfdx = ["dep:dfdx"]

[lib]
name = "gymnasium"
path = "src/lib.rs"
crate-type = ["rlib"]
