[package]
name = "gymnasium_cli"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.3", features = ["derive"] }
gymnasium = { path = "../gymnasium" }

[[bin]]
name = "gymnasium_cli"
path = "src/main.rs"
