[package]
name = "gymnasium_py"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
gymnasium = { workspace = true }
pyo3 = { workspace = true, optional = true }

[features]
default = []
python = ["pyo3"]

[lib]
name = "gymnasium_rs"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
doc = false
