[package]
name = "gymnasium_sys"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
pyo3 = { workspace = true }

[build-dependencies]
pyo3_bindgen = { workspace = true }

[lib]
name = "gymnasium_sys"
path = "src/lib.rs"
crate-type = ["rlib"]
doctest = false
